--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <ul class="nav-content">
             <li><a href="">Home</a></li>
             <li><a href="">Services</a></li>
-            <!-- <li><a href="">About</a></li> -->
+            <li><a href="">About</a></li>
         </ul>
     </div>
 </body>
